# AI_Subtitle_Creator

./: .gitignore  README.md  aisub-gui-folder.spec  aisub-gui.spec  aisub.spec  build_exe.bat  build_gui_exe.bat  build_gui_folder.bat  pyproject.toml
.codex/environments/: environment.toml
build-rebuild/aisub-gui-folder/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-aisub-gui-folder.txt  xref-aisub-gui-folder.html
build-size-rebuild/aisub-gui-folder/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-aisub-gui-folder.txt  xref-aisub-gui-folder.html
src/ai_subtitle_creator/: __init__.py  cli.py  gui.py  model_catalog.py  models.py  process_priority.py  settings_store.py  subtitles.py
src/ai_subtitle_creator/backends/: __init__.py  base.py  faster_whisper_backend.py
tests/: test_faster_whisper_backend.py  test_model_catalog.py  test_process_priority.py  test_settings_store.py  test_subtitles.py
